build/y.output
Grammar

    0 $accept: prog $end

    1 prog: beginning
    2     | ε

    3 beginning: part_of_code
    4          | beginning part_of_code

    5 part_of_code: body
    6             | designs
    7             | import
    8             | function_dec
    9             | class_dec

   10 function_dec: '(' K_FUNCTION function_body ')' '(' ')' ';'
   11             | '(' K_ASYNC '(' ')' ARROW body ')' '(' ')' ';'
   12             | '(' '(' ')' ARROW body ')' '(' ')' ';'
   13             | K_FUNCTION ID function_body

   14 class_dec: K_CLASS ID '{' ID code_block_class '}'
   15          | K_CLASS ID K_EXTENDS ID '{' ID code_block_class '}'
   16          | K_CLASS ID K_EXTENDS ID '.' sequence_id '{' ID code_block_class '}'

   17 import: K_IMPORT L_STR ';'
   18       | K_IMPORT import_content1 K_FROM L_STR ';'

   19 import_content1: ID
   20                | '*' K_AS ID
   21                | '{' import_content2 '}'
   22                | ID ',' '{' import_content2 '}'
   23                | ID ',' '*' K_AS ID

   24 import_content2: ID
   25                | ID K_AS ID
   26                | K_DEFAULT K_AS ID
   27                | L_STR K_AS ID
   28                | import_content2 ',' import_content2

   29 body: '{' '}'
   30     | '{' code_inside '}'

   31 code_block_class: '(' ')' body
   32                 | '(' args ')' body
   33                 | code_block_class ID '(' ')' body
   34                 | code_block_class ID '(' args ')' body

   35 code_inside: designs
   36            | body
   37            | function_dec
   38            | class_dec
   39            | code_inside designs
   40            | code_inside body
   41            | code_inside function_dec
   42            | code_inside class_dec

   43 designs: ID ':' designs
   44        | expr ';'
   45        | declaration ';'
   46        | interrupt ';'
   47        | try_catch
   48        | if
   49        | ';'
   50        | switch
   51        | while
   52        | do_while
   53        | for

   54 ret_block_obj: ID ':' expr ';'
   55              | ret_block_obj ID ':' expr
   56              | ret_block_obj ID ':' expr ';'

   57 if: K_IF '(' expr ')' part_of_code
   58   | K_IF '(' expr ')' block K_ELSE block
   59   | K_IF '(' expr ')' block K_ELSE if

   60 block: body
   61      | declaration ';'
   62      | expr ';'
   63      | ';'
   64      | interrupt ';'

   65 while: K_WHILE '(' expr ')' part_of_code

   66 do_while: K_DO part_of_code K_WHILE '(' expr ')' ';'

   67 try_catch: K_TRY body K_FINALLY body
   68          | K_TRY body K_CATCH '(' '{' ID '}' ')' body
   69          | K_TRY body K_CATCH '(' '{' ID ',' sequence_id '}' ')' body
   70          | K_TRY body K_CATCH '(' ID ')' body K_FINALLY body
   71          | K_TRY body K_CATCH '(' ID ')' body

   72 sequence_id: ID
   73            | ID ',' sequence_id

   74 for: K_FOR '(' initialization ';' condition ';' afterthought ')' part_of_code
   75    | K_FOR '(' type ID K_IN expr ')' part_of_code
   76    | K_FOR '(' ID K_IN expr ')' part_of_code
   77    | K_FOR '(' type ID K_OF expr ')' part_of_code
   78    | K_FOR '(' ID K_OF expr ')' part_of_code

   79 initialization: declaration
   80               | expr
   81               | ε

   82 afterthought: expr
   83             | ε

   84 condition: expr
   85          | ε

   86 switch: K_SWITCH '(' expr ')' '{' in_switch '}'
   87       | K_SWITCH '(' expr ')' '{' K_DEFAULT ':' beginning '}'
   88       | K_SWITCH '(' expr ')' '{' '}'

   89 in_switch: case
   90          | default

   91 default: K_DEFAULT ':' case
   92        | K_DEFAULT ':' beginning case
   93        | case K_DEFAULT ':' beginning
   94        | case K_DEFAULT ':' beginning case
   95        | case K_DEFAULT ':'

   96 case: K_CASE expr ':'
   97     | K_CASE expr ':' beginning
   98     | case K_CASE expr ':'
   99     | case K_CASE expr ':' beginning

  100 declaration: type ID
  101            | type ID '=' expr
  102            | type ID '=' expr OP_LOGIC '{' '}'
  103            | type ID '=' '{' '}'
  104            | type ID '=' function_dec
  105            | declaration ',' ID
  106            | declaration ',' ID '=' expr
  107            | declaration ',' ID '=' expr OP_LOGIC '{' '}'
  108            | declaration ',' ID '=' '{' '}'

  109 type: K_VAR
  110     | K_CONST
  111     | K_LET

  112 expr_logic: L_BOOL
  113           | '!' expr
  114           | '~' expr
  115           | variable '=' expr OP_LOGIC '{' '}'
  116           | expr OP_LOGIC expr
  117           | expr '?' expr ':' expr

  118 expr_arithmetic: number
  119                | OP_INC variable
  120                | variable OP_INC
  121                | expr OP_ARITHM expr
  122                | expr OP_ARITHM_SUM expr
  123                | variable OP_AND_ASSIGN expr
  124                | expr OP_BIT expr
  125                | expr '*' expr
  126                | OP_ARITHM_SUM expr

  127 expr: variable
  128     | val_cant_assign
  129     | new
  130     | delete
  131     | K_THIS
  132     | K_THIS arr_prototype
  133     | expr_logic
  134     | expr_arithmetic
  135     | '(' expr ')'
  136     | '(' expr ')' '.' method
  137     | K_NULL
  138     | variable '=' expr
  139     | variable '=' function_dec
  140     | variable '=' '{' '}'
  141     | expr ',' expr
  142     | ID K_IN expr
  143     | val_cant_assign K_IN expr
  144     | K_TYPEOF expr
  145     | expr K_INSTANCEOF ID

  146 new: K_NEW variable

  147 delete: K_DELETE variable
  148       | K_DELETE '(' variable ')'

  149 brekets_with_content: '(' ')'
  150                     | '(' expr ')'
  151                     | '(' expr ',' ')'
  152                     | brekets_with_content '(' ')'
  153                     | brekets_with_content '(' expr ')'
  154                     | brekets_with_content '(' expr ',' ')'

  155 number: L_FLOAT
  156       | L_INT
  157       | L_INT_HEX
  158       | L_INT_OCT
  159       | number '.' method

  160 val_cant_assign: L_STR
  161                | L_STR '.' method
  162                | arr_prototype
  163                | '{' inner_obj '}'

  164 variable: ID
  165         | K_THIS '.' ID
  166         | variable '.' method
  167         | variable '[' expr ']'
  168         | K_FUNCTION function_body
  169         | variable brekets_with_content

  170 method: ID
  171       | ID brekets_with_content
  172       | method '.' ID brekets_with_content
  173       | method '.' ID

  174 inner_obj: L_STR ':' expr
  175          | ID ':' expr
  176          | inner_obj ',' req_inner
  177          | ID ':' K_FUNCTION ID function_body

  178 req_inner: inner_obj
  179          | req_inner ',' inner_obj

  180 arr_prototype: '[' ']'
  181              | '[' ',' ']'
  182              | '[' expr ']'
  183              | '[' ',' expr ']'
  184              | '[' expr ',' ']'
  185              | '[' ',' expr ',' ']'

  186 function_body: '(' args ')' body
  187              | '(' ')' body

  188 args: ID
  189     | ID '=' expr
  190     | args ',' args

  191 interrupt: K_THROW expr
  192          | K_RETURN
  193          | K_RETURN expr
  194          | K_RETURN '{' '}'
  195          | K_RETURN '{' ret_block_obj '}'
  196          | K_BREAK
  197          | K_BREAK ID
  198          | K_CONTINUE
  199          | K_CONTINUE ID


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 113
    '(' (40) 10 11 12 31 32 33 34 57 58 59 65 66 68 69 70 71 74 75 76 77 78 86 87 88 135 136 148 149 150 151 152 153 154 186 187
    ')' (41) 10 11 12 31 32 33 34 57 58 59 65 66 68 69 70 71 74 75 76 77 78 86 87 88 135 136 148 149 150 151 152 153 154 186 187
    '*' (42) 20 23 125
    ',' (44) 22 23 28 69 73 105 106 107 108 141 151 154 176 179 181 183 184 185 190
    '.' (46) 16 136 159 161 165 166 172 173
    ':' (58) 43 54 55 56 87 91 92 93 94 95 96 97 98 99 117 174 175 177
    ';' (59) 10 11 12 17 18 44 45 46 49 54 56 61 62 63 64 66 74
    '=' (61) 101 102 103 104 106 107 108 115 138 139 140 189
    '?' (63) 117
    '[' (91) 167 180 181 182 183 184 185
    ']' (93) 167 180 181 182 183 184 185
    '{' (123) 14 15 16 21 22 29 30 68 69 86 87 88 102 103 107 108 115 140 163 194 195
    '}' (125) 14 15 16 21 22 29 30 68 69 86 87 88 102 103 107 108 115 140 163 194 195
    '~' (126) 114
    error (256)
    K_ASYNC (258) 11
    K_EXTENDS (259) 15 16
    K_AS (260) 20 23 25 26 27
    K_BREAK (261) 196 197
    K_CASE (262) 96 97 98 99
    K_CATCH (263) 68 69 70 71
    K_CLASS (264) 14 15 16
    K_CONST (265) 110
    K_CONTINUE (266) 198 199
    K_DEFAULT (267) 26 87 91 92 93 94 95
    K_DELETE (268) 147 148
    K_DO (269) 66
    K_ELSE (270) 58 59
    K_FINALLY (271) 67 70
    K_FOR (272) 74 75 76 77 78
    K_FROM (273) 18
    K_FUNCTION (274) 10 13 168 177
    K_IF (275) 57 58 59
    K_IN (276) 75 76 142 143
    K_IMPORT (277) 17 18
    K_INSTANCEOF (278) 145
    K_LET (279) 111
    K_NEW (280) 146
    K_NULL (281) 137
    K_OF (282) 77 78
    K_RETURN (283) 192 193 194 195
    K_SWITCH (284) 86 87 88
    K_THIS (285) 131 132 165
    K_THROW (286) 191
    K_TRY (287) 67 68 69 70 71
    K_TYPEOF (288) 144
    K_VAR (289) 109
    K_WHILE (290) 65 66
    L_INT (291) 156
    L_INT_OCT (292) 158
    L_INT_HEX (293) 157
    L_FLOAT (294) 155
    L_BOOL (295) 112
    L_STR (296) 17 18 27 160 161 174
    ID (297) 13 14 15 16 19 20 22 23 24 25 26 27 33 34 43 54 55 56 68 69 70 71 72 73 75 76 77 78 100 101 102 103 104 105 106 107 108 142 145 164 165 170 171 172 173 175 177 188 189 197 199
    ARROW (298) 11 12
    OP_AND_ASSIGN (299) 123
    OP_ARITHM_SUM (300) 122 126
    OP_ARITHM (301) 121
    OP_INC (302) 119 120
    OP_LOGIC (303) 102 107 115 116
    OP_BIT (304) 124
    EXPR (305)
    FIX (306)


Nonterminals, with rules where they appear

    $accept (67)
        on left: 0
    prog (68)
        on left: 1 2
        on right: 0
    beginning (69)
        on left: 3 4
        on right: 1 4 87 92 93 94 97 99
    part_of_code (70)
        on left: 5 6 7 8 9
        on right: 3 4 57 65 66 74 75 76 77 78
    function_dec (71)
        on left: 10 11 12 13
        on right: 8 37 41 104 139
    class_dec (72)
        on left: 14 15 16
        on right: 9 38 42
    import (73)
        on left: 17 18
        on right: 7
    import_content1 (74)
        on left: 19 20 21 22 23
        on right: 18
    import_content2 (75)
        on left: 24 25 26 27 28
        on right: 21 22 28
    body (76)
        on left: 29 30
        on right: 5 11 12 31 32 33 34 36 40 60 67 68 69 70 71 186 187
    code_block_class (77)
        on left: 31 32 33 34
        on right: 14 15 16 33 34
    code_inside (78)
        on left: 35 36 37 38 39 40 41 42
        on right: 30 39 40 41 42
    designs (79)
        on left: 43 44 45 46 47 48 49 50 51 52 53
        on right: 6 35 39 43
    ret_block_obj (80)
        on left: 54 55 56
        on right: 55 56 195
    if (81)
        on left: 57 58 59
        on right: 48 59
    block (82)
        on left: 60 61 62 63 64
        on right: 58 59
    while (83)
        on left: 65
        on right: 51
    do_while (84)
        on left: 66
        on right: 52
    try_catch (85)
        on left: 67 68 69 70 71
        on right: 47
    sequence_id (86)
        on left: 72 73
        on right: 16 69 73
    for (87)
        on left: 74 75 76 77 78
        on right: 53
    initialization (88)
        on left: 79 80 81
        on right: 74
    afterthought (89)
        on left: 82 83
        on right: 74
    condition (90)
        on left: 84 85
        on right: 74
    switch (91)
        on left: 86 87 88
        on right: 50
    in_switch (92)
        on left: 89 90
        on right: 86
    default (93)
        on left: 91 92 93 94 95
        on right: 90
    case (94)
        on left: 96 97 98 99
        on right: 89 91 92 93 94 95 98 99
    declaration (95)
        on left: 100 101 102 103 104 105 106 107 108
        on right: 45 61 79 105 106 107 108
    type (96)
        on left: 109 110 111
        on right: 75 77 100 101 102 103 104
    expr_logic (97)
        on left: 112 113 114 115 116 117
        on right: 133
    expr_arithmetic (98)
        on left: 118 119 120 121 122 123 124 125 126
        on right: 134
    expr (99)
        on left: 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145
        on right: 44 54 55 56 57 58 59 62 65 66 75 76 77 78 80 82 84 86 87 88 96 97 98 99 101 102 106 107 113 114 115 116 117 121 122 123 124 125 126 135 136 138 141 142 143 144 145 150 151 153 154 167 174 175 182 183 184 185 189 191 193
    new (100)
        on left: 146
        on right: 129
    delete (101)
        on left: 147 148
        on right: 130
    brekets_with_content (102)
        on left: 149 150 151 152 153 154
        on right: 152 153 154 169 171 172
    number (103)
        on left: 155 156 157 158 159
        on right: 118 159
    val_cant_assign (104)
        on left: 160 161 162 163
        on right: 128 143
    variable (105)
        on left: 164 165 166 167 168 169
        on right: 115 119 120 123 127 138 139 140 146 147 148 166 167 169
    method (106)
        on left: 170 171 172 173
        on right: 136 159 161 166 172 173
    inner_obj (107)
        on left: 174 175 176 177
        on right: 163 176 178 179
    req_inner (108)
        on left: 178 179
        on right: 176 179
    arr_prototype (109)
        on left: 180 181 182 183 184 185
        on right: 132 162
    function_body (110)
        on left: 186 187
        on right: 10 13 168 177
    args (111)
        on left: 188 189 190
        on right: 32 34 186 190
    interrupt (112)
        on left: 191 192 193 194 195 196 197 198 199
        on right: 46 64


State 0

    0 $accept: • prog $end

    K_BREAK        shift, and go to state 1
    K_CLASS        shift, and go to state 2
    K_CONST        shift, and go to state 3
    K_CONTINUE     shift, and go to state 4
    K_DELETE       shift, and go to state 5
    K_DO           shift, and go to state 6
    K_FOR          shift, and go to state 7
    K_FUNCTION     shift, and go to state 8
    K_IF           shift, and go to state 9
    K_IMPORT       shift, and go to state 10
    K_LET          shift, and go to state 11
    K_NEW          shift, and go to state 12
    K_NULL         shift, and go to state 13
    K_RETURN       shift, and go to state 14
    K_SWITCH       shift, and go to state 15
    K_THIS         shift, and go to state 16
    K_THROW        shift, and go to state 17
    K_TRY          shift, and go to state 18
    K_TYPEOF       shift, and go to state 19
    K_VAR          shift, and go to state 20
    K_WHILE        shift, and go to state 21
    L_INT          shift, and go to state 22
    L_INT_OCT      shift, and go to state 23
    L_INT_HEX      shift, and go to state 24
    L_FLOAT        shift, and go to state 25
    L_BOOL         shift, and go to state 26
    L_STR          shift, and go to state 27
    ID             shift, and go to state 28
    OP_ARITHM_SUM  shift, and go to state 29
    OP_INC         shift, and go to state 30
    '!'            shift, and go to state 31
    '~'            shift, and go to state 32
    '('            shift, and go to state 33
    ';'            shift, and go to state 34
    '{'            shift, and go to state 35
    '['            shift, and go to state 36

    $default  reduce using rule 2 (prog)

    prog             go to state 37
    beginning        go to state 38
    part_of_code     go to state 39
    function_dec     go to state 40
    class_dec        go to state 41
    import           go to state 42
    body             go to state 43
    designs          go to state 44
    if               go to state 45
    while            go to state 46
    do_while         go to state 47
    try_catch        go to state 48
    for              go to state 49
    switch           go to state 50
    declaration      go to state 51
    type             go to state 52
    expr_logic       go to state 53
    expr_arithmetic  go to state 54
    expr             go to state 55
    new              go to state 56
    delete           go to state 57
    number           go to state 58
    val_cant_assign  go to state 59
    variable         go to state 60
    arr_prototype    go to state 61
    interrupt        go to state 62


State 1

  196 interrupt: K_BREAK •
  197          | K_BREAK • ID

    ID  shift, and go to state 63

    $default  reduce using rule 196 (interrupt)


State 2

   14 class_dec: K_CLASS • ID '{' ID code_block_class '}'
   15          | K_CLASS • ID K_EXTENDS ID '{' ID code_block_class '}'
   16          | K_CLASS • ID K_EXTENDS ID '.' sequence_id '{' ID code_block_class '}'

    ID  shift, and go to state 64


State 3

  110 type: K_CONST •

    $default  reduce using rule 110 (type)


State 4

  198 interrupt: K_CONTINUE •
  199          | K_CONTINUE • ID

    ID  shift, and go to state 65

    $default  reduce using rule 198 (interrupt)


State 5

  147 delete: K_DELETE • variable
  148       | K_DELETE • '(' variable ')'

    K_FUNCTION  shift, and go to state 66
    K_THIS      shift, and go to state 67
    ID          shift, and go to state 68
    '('         shift, and go to state 69

    variable  go to state 70


State 6

   66 do_while: K_DO • part_of_code K_WHILE '(' expr ')' ';'

    K_BREAK        shift, and go to state 1
    K_CLASS        shift, and go to state 2
    K_CONST        shift, and go to state 3
    K_CONTINUE     shift, and go to state 4
    K_DELETE       shift, and go to state 5
    K_DO           shift, and go to state 6
    K_FOR          shift, and go to state 7
    K_FUNCTION     shift, and go to state 8
    K_IF           shift, and go to state 9
    K_IMPORT       shift, and go to state 10
    K_LET          shift, and go to state 11
    K_NEW          shift, and go to state 12
    K_NULL         shift, and go to state 13
    K_RETURN       shift, and go to state 14
    K_SWITCH       shift, and go to state 15
    K_THIS         shift, and go to state 16
    K_THROW        shift, and go to state 17
    K_TRY          shift, and go to state 18
    K_TYPEOF       shift, and go to state 19
    K_VAR          shift, and go to state 20
    K_WHILE        shift, and go to state 21
    L_INT          shift, and go to state 22
    L_INT_OCT      shift, and go to state 23
    L_INT_HEX      shift, and go to state 24
    L_FLOAT        shift, and go to state 25
    L_BOOL         shift, and go to state 26
    L_STR          shift, and go to state 27
    ID             shift, and go to state 28
    OP_ARITHM_SUM  shift, and go to state 29
    OP_INC         shift, and go to state 30
    '!'            shift, and go to state 31
    '~'            shift, and go to state 32
    '('            shift, and go to state 33
    ';'            shift, and go to state 34
    '{'            shift, and go to state 35
    '['            shift, and go to state 36

    part_of_code     go to state 71
    function_dec     go to state 40
    class_dec        go to state 41
    import           go to state 42
    body             go to state 43
    designs          go to state 44
    if               go to state 45
    while            go to state 46
    do_while         go to state 47
    try_catch        go to state 48
    for              go to state 49
    switch           go to state 50
    declaration      go to state 51
    type             go to state 52
    expr_logic       go to state 53
    expr_arithmetic  go to state 54
    expr             go to state 55
    new              go to state 56
    delete           go to state 57
    number           go to state 58
    val_cant_assign  go to state 59
    variable         go to state 60
    arr_prototype    go to state 61
    interrupt        go to state 62


State 7

   74 for: K_FOR • '(' initialization ';' condition ';' afterthought ')' part_of_code
   75    | K_FOR • '(' type ID K_IN expr ')' part_of_code
   76    | K_FOR • '(' ID K_IN expr ')' part_of_code
   77    | K_FOR • '(' type ID K_OF expr ')' part_of_code
   78    | K_FOR • '(' ID K_OF expr ')' part_of_code

    '('  shift, and go to state 72


State 8

   13 function_dec: K_FUNCTION • ID function_body
  168 variable: K_FUNCTION • function_body

    ID   shift, and go to state 73
    '('  shift, and go to state 74

    function_body  go to state 75


State 9

   57 if: K_IF • '(' expr ')' part_of_code
   58   | K_IF • '(' expr ')' block K_ELSE block
   59   | K_IF • '(' expr ')' block K_ELSE if

    '('  shift, and go to state 76


State 10

   17 import: K_IMPORT • L_STR ';'
   18       | K_IMPORT • import_content1 K_FROM L_STR ';'

    L_STR  shift, and go to state 77
    ID     shift, and go to state 78
    '*'    shift, and go to state 79
    '{'    shift, and go to state 80

    import_content1  go to state 81


State 11

  111 type: K_LET •

    $default  reduce using rule 111 (type)


State 12

  146 new: K_NEW • variable

    K_FUNCTION  shift, and go to state 66
    K_THIS      shift, and go to state 67
    ID          shift, and go to state 68

    variable  go to state 82


State 13

  137 expr: K_NULL •

    $default  reduce using rule 137 (expr)


State 14

  192 interrupt: K_RETURN •
  193          | K_RETURN • expr
  194          | K_RETURN • '{' '}'
  195          | K_RETURN • '{' ret_block_obj '}'

    K_DELETE       shift, and go to state 5
    K_FUNCTION     shift, and go to state 66
    K_NEW          shift, and go to state 12
    K_NULL         shift, and go to state 13
    K_THIS         shift, and go to state 16
    K_TYPEOF       shift, and go to state 19
    L_INT          shift, and go to state 22
    L_INT_OCT      shift, and go to state 23
    L_INT_HEX      shift, and go to state 24
    L_FLOAT        shift, and go to state 25
    L_BOOL         shift, and go to state 26
    L_STR          shift, and go to state 27
    ID             shift, and go to state 83
    OP_ARITHM_SUM  shift, and go to state 29
    OP_INC         shift, and go to state 30
    '!'            shift, and go to state 31
    '~'            shift, and go to state 32
    '('            shift, and go to state 84
    '{'            shift, and go to state 85
    '['            shift, and go to state 36

    $default  reduce using rule 192 (interrupt)

    expr_logic       go to state 53
    expr_arithmetic  go to state 54
    expr             go to state 86
    new              go to state 56
    delete           go to state 57
    number           go to state 58
    val_cant_assign  go to state 59
    variable         go to state 60
    arr_prototype    go to state 61


State 15

   86 switch: K_SWITCH • '(' expr ')' '{' in_switch '}'
   87       | K_SWITCH • '(' expr ')' '{' K_DEFAULT ':' beginning '}'
   88       | K_SWITCH • '(' expr ')' '{' '}'

    '('  shift, and go to state 87


State 16

  131 expr: K_THIS •
  132     | K_THIS • arr_prototype
  165 variable: K_THIS • '.' ID

    '.'  shift, and go to state 88
    '['  shift, and go to state 36

    $default  reduce using rule 131 (expr)

    arr_prototype  go to state 89


State 17

  191 interrupt: K_THROW • expr

    K_DELETE       shift, and go to state 5
    K_FUNCTION     shift, and go to state 66
    K_NEW          shift, and go to state 12
    K_NULL         shift, and go to state 13
    K_THIS         shift, and go to state 16
    K_TYPEOF       shift, and go to state 19
    L_INT          shift, and go to state 22
    L_INT_OCT      shift, and go to state 23
    L_INT_HEX      shift, and go to state 24
    L_FLOAT        shift, and go to state 25
    L_BOOL         shift, and go to state 26
    L_STR          shift, and go to state 27
    ID             shift, and go to state 83
    OP_ARITHM_SUM  shift, and go to state 29
    OP_INC         shift, and go to state 30
    '!'            shift, and go to state 31
    '~'            shift, and go to state 32
    '('            shift, and go to state 84
    '{'            shift, and go to state 90
    '['            shift, and go to state 36

    expr_logic       go to state 53
    expr_arithmetic  go to state 54
    expr             go to state 91
    new              go to state 56
    delete           go to state 57
    number           go to state 58
    val_cant_assign  go to state 59
    variable         go to state 60
    arr_prototype    go to state 61


State 18

   67 try_catch: K_TRY • body K_FINALLY body
   68          | K_TRY • body K_CATCH '(' '{' ID '}' ')' body
   69          | K_TRY • body K_CATCH '(' '{' ID ',' sequence_id '}' ')' body
   70          | K_TRY • body K_CATCH '(' ID ')' body K_FINALLY body
   71          | K_TRY • body K_CATCH '(' ID ')' body

    '{'  shift, and go to state 92

    body  go to state 93


State 19

  144 expr: K_TYPEOF • expr
